# arbitrum-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: agent_deposit.rs  commands.rs  main.rs  output.rs  rpc.rs
